--- a/templates/login.html
+++ b/templates/login.html
@@ -79,6 +79,8 @@
     <script src="{{ url_for('static', filename='login-register/vendor/jquery.cookie/jquery.cookie.js') }}"> </script>
     <script src="{{ url_for('static', filename='login-register/vendor/jquery-validation/jquery.validate.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/front.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/app-config.js') }}"></script>
     <script src="{{ url_for('static', filename='js/login.js') }}"></script>
+
   </body>
 </html>
