--- a/templates/register.html
+++ b/templates/register.html
@@ -99,6 +99,7 @@
     <script src="{{ url_for('static', filename='login-register/vendor/jquery.cookie/jquery.cookie.js') }}"> </script>
     <script src="{{ url_for('static', filename='login-register/vendor/jquery-validation/jquery.validate.min.js') }}"></script>
     <script src="{{ url_for('static', filename='login-register/js/front.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/app-config.js') }}"></script>
     <script src="{{ url_for('static', filename='js/register.js') }}"></script>
     <script type="text/javascript">
       $( document ).ready(function(){
